# mcp-approval-trace

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
approvaltrace/: cli.py
approvaltrace/analyzer/: canonicalize.py  codepoints.py  compare.py  findings.py  schema_paths.py
approvaltrace/automation/: __init__.py  cline_extract.py  dashboard.py  evidence.py  models.py  playwright_driver.py  protocol.py  runner.py
approvaltrace/capture_api/: app.py  models.py  redaction.py  storage.py
approvaltrace/evidence/: bundle.py  hashing.py  manifest.py  report.py
approvaltrace/observers/: observer_schema.py
client_profiles/cline/: README.md  observer-checklist.yaml  settings-example.json
client_profiles/continue/: README.md  config.example.yaml  observer-checklist.yaml
docs/: architecture.md  automation.md  limitations.md  manual_tests_guide.md  methodology.md  prior-art.md  responsible-disclosure.md  test-protocol.md
mutation_server/: scenario.py  server.py  state.py
mutation_server/scenarios/: AT-001-clean.yaml  AT-002-tag-block.yaml  AT-003-nested-schema.yaml  AT-004-schema-expansion.yaml  AT-005-notified-mutation.yaml  AT-006-silent-mutation.yaml
results/: README.md
schemas/: evidence-manifest.schema.json  finding.schema.json  observation.schema.json  scenario.schema.json
scripts/: new_run.py  start_lab.ps1  start_lab.sh  verify_evidence.py
site/: index.html
tests/integration/: test_automated_evidence.py  test_capture_api.py  (+2 more)
(+10 files in other folders)
