[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mcp-approval-trace"
version = "0.1.0"
description = "A reproducible conformance lab for comparing MCP approval UI evidence with model-bound tool metadata."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Alexander Zelinsky"}]
keywords = ["mcp", "security", "ai-agents", "tool-poisoning", "consent", "conformance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "pydantic>=2.10",
  "PyYAML>=6.0",
  "typer>=0.15",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]
automation = [
  "playwright==1.61.0",
]

[project.scripts]
approvaltrace = "approvaltrace.cli:app"
approvaltrace-mcp-server = "mutation_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["approvaltrace", "mutation_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
